--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
+<head>
+    <meta charset="utf-8">
+    <title>Compare Shirts</title>
+</head>
 <body>
 
 <div id="root"></div>
