--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,9 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-
+    <link href="/index.css" type="text/css" rel="stylesheet">
     <title>Compare Shirts</title>
 </head>
 <body>
